model/deployment/llama-2-7b-aixiety-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-2-7b-aixiety-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: llama-2-7b-aixiety-v2-layer 
  template:
    metadata:
      labels:
        component: llama-2-7b-aixiety-v2-layer
    spec:
      containers:
      - name: llama-2-7b-aixiety-v2-container
        image: astrogogh/llama-2-7b-aixiety-v2:latest
        ports:
          - containerPort: 8080
        resources:
          limits:
            nvidia.com/gpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: llama-2-7b-aixiety-v2-service
  namespace: default
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    component: llama-2-7b-aixiety-v2-layer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
