model/deployment/llama-2-7b-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llama-2-7b-aixiety-v2-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: aixiety-address
    networking.gke.io/managed-certificates: aixiety-certificate
spec:
  rules:
    - host: aixiety.my.id  # Replace with your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llama-2-7b-aixiety-v2-service
                port:
                  number: 8080
